# VTKQuadricDecimation

./: CMakeLists.txt  QuadricDecimation.cxx
